style: fix overflow on safari
I love you Vastus for finding this

Closes #4635

--- a/frontend/src/styles/profile.scss
+++ b/frontend/src/styles/profile.scss
@@ -97,7 +97,6 @@
     align-content: center;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    justify-items: baseline;
     position: relative;
 
     .buttonGroup {
